--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <body>
     <!-- <div class="container home-page">
     </div> -->
+    <div class="title">
+        Store Locator
+    </div>
     <div id='map'></div>
 
     <script>
