--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
 
+    <!-- Font Awesome import -->
+    <script src="https://kit.fontawesome.com/b1126eca1d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
 
 </head>
@@ -22,6 +24,15 @@
     <div class="title">
         Store Locator
     </div>
+
+    <div class="search-container" type="text">
+        <div class="search-container__search">
+            <input type="text" placeholder="Enter Zip" class="search-container__input" id="zip-code" />
+            <i class="fas fa-search"></i>
+        </div>
+    </div>
+    <!-- <input type="text" class="search-container__input" /> -->
+    </input>
     <div id='map'></div>
 
     <script>
