--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <!-- Font Awesome import -->
     <script src="https://kit.fontawesome.com/b1126eca1d.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
 
 </head>
