Displayed list of stores in the div

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     <!-- Search zip end -->
 
     <!-- Store list container -->
-    <div class="store-list-container"></div>
+    <div class="store-list-container">
+        <div class="store-list">
+
+        </div>
+    </div>
 
     <div id='map'></div>
 
