Added search functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <!-- Search zip -->
     <div class="search-container" type="text">
         <div class="search-container__search">
-            <input type="text" placeholder="Enter Zip" class="search-container__input" id="zip-code" />
+            <input type="text" placeholder="Enter Zip" onkeyup="onEnter(event)" class="search-container__input"
+                id="zip-code" />
             <i class="fas fa-search"></i>
         </div>
     </div>
