--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <!-- Store list container -->
     <div class="store-list-container">
         <div class="store-list">
-
+            <div class="intro">
+                <span class="enter-zip">Enter Zip Code</span>
+                <span class="find-stores">Find stores near you</span>
+            </div>
         </div>
     </div>
 
