--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Store Locator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="https://pngimg.com/uploads/starbucks/starbucks_PNG18.png" />
 
     <!-- Mapbox import -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
